@@ -1,152 +1,0 @@
-.LL 8i
-.TH vadduser 1
-.SH NAME
-vadduser \- Add a new user to a virtual domain
-
-.SH SYNOPSYS
-.B vadduser
-[
-.I options
-]
-.I email_address
-.I password
-
-.SH DESCRIPTION
-.PP
-\fBvadduser\fR adds a new user to a virtual domain. The account created is inactive. The
-account becomes active when the user logs in (using IMAP4 or POP3). The username should be
-either alpha-numeric or have the characters '.', '-', '_'. The username, gecos and domain
-component cannot have the ':' character. The case is changed to lower case before adding to
-the database. For a clustered domain, the user is also added to the table \fBhostcntrl\fR
-on the \fBcontrol host\fR. \fBvadduser\fR has setuid bit as root and must be run as root
-or indimail user. Password is encrypted using \fBcrypt(3)\fR. The Directory Structure Layout's
-hashed component (See Below) is incremented by one.
-
-The user's home dirctory has four components
-.nr step 1 1
-.IP \n[step] 3
-Base Path
-.IP \n+[step]
-Directory Prefix
-.IP \n+[step]
-Domain Name
-.IP \n+[step]
-Hashed Component
-
-.PP
-The Base Path is defined by the environment variable \fBBASE_PATH\fR. If this variable is not set,
-the value is taken from BASE_PATH defined indimail.h. If \fBvfstab\fR (\fB\-b\fR option) is
-run periodically, \fB\-b\fR option in \fBvadduser\fR can be used to balance optimally user
-creation across filesystems to distribute the load.
-
-The Directory Prefix depends on the first character of the username. It can have one of the
-five values
-
-.nr step 1 1
-.IP \n[step] 3
-A2E: First character of username is a alphabet including and lying in between 'a' and 'e'
-.IP \n+[step]
-F2K: First character of username is a alphabet including and lying in between 'f' and 'k'
-.IP \n+[step]
-L2P: First character of username is a alphabet including and lying in between 'l' and 'p'
-.IP \n+[step]
-Q2S: First character of username is a alphabet including and lying in between 'q' and 's'
-.IP \n+[step]
-T2Zsym: First character of username is a alphabet including and lying in between 't' and 'z' or starts with a non alphabetic character.
-
-.PP
-The Domain Name component is derived from the virtual domain (domain component) of
-the username.
-.PP
-The Hashed Component is constructed using an adaptive directory structure which is
-automatically managed by the core indimail api functions "vadduser" and "vdeluser".
-This structure is known as Directory Structure Layout. For sites with 100 users or less,
-all user directories are stored in the virtual domain directory. For sites that go above 100
-users the adaptive directory structure goes into effect. The basic idea is to break up
-the user Maildir directories across multiple directories and sub directories so that there
-are never more than 100 user directories in a single directory. You can look at this
-structure using the \fBprintdir(1)\fR program.
-.PP
-The default directory setup allows for 62 directories in 3 levels and 100 user directories
-per directory. The total number of user directories is equal to
-100 + (62 * 100) + (62 * 62 * 100) + (62 * 62 * 62 * 100) = over 24 million directories.
-This should be more than sufficient for any site and probably goes beyond the technology
-of directory structures. 
-.PP
-If you are going to be storing large numbers of user directories, make sure you set your
-file system to have a higher than normal percentage of inodes. \fBvadduser\fR will
-automatically create these directories and sub directories as needed and populate each
-directory with up to 100 user accounts. As soon as a directory reaches 100 users it will
-create the next directory or sub directory and store the new users directory there. 
-.PP
-Over a period of time, due to large no of deletions of users, the Directory Structure Layout
-for all users can be regenerated using the program \fBvreorg(8)\fR.
-
-.SH OPTIONS
-.PP
-.TP
-\fB\-V\fR
-Display Version Numbers
-.TP
-\fB\-v\fR
-Set verbose mode.
-.TP
-\fB\-c\fR \fIComment\fR
-Set Comment (Sets the gecos comment field)
-.TP
-\fB\-d\fR
-Create the directory for the user. If this option is not given, the home directory is not
-created. It gets created when the user logs in either through IMAP4 or POP3 protocol.
-.TP
-\fB\-e\fR \fIpasswd\fR
-Expects Standard Encryption Password to be given on command line.
-.TP
-\fB\-r\fR
-Generates Random Password. Need not give password on command line.
-.TP
-\fB\-a\fR
-Set the account to use APOP instead of the default POP. 
-.TP
-\fB\-B\fR
-Set the base path for the home directories.
-.TP
-\fB\-b\fR
-Balances users across filesystems listed in fstab table as they are created. This option
-should be used if vfstab (with -b option) is enabled in cron.
-.TP
-\fB\-q\fR [\fIquota in bytes\fR]
-Set the hard quota limit for the user. If not supplied then the default system hard quota
-limit is set. The default limit is either 50M or what ever is set via --enable-hardquota.
-If set to NOQUOTA then the user will have no quota limit.
-
-If the domain has domain limits set using vmoddomlimits(1), then domain limits apply. Also,
-this option will not be allowed if permission for creating quota is disabled in domain limits.
-.TP
-\fB\-h\fR \fIHost\fR
-For a clustered domain, this option can be used to create the user on a specific host having
-hostid as \fIHost\Fr.
-.TP
-\fB\-m\fR \fImdahost\fR
-For a clustered domain, this option can be used to create the user on a specific cluster
-having Mail Delivery Host as \fImdahost\Fr.
-.TP
-\fIemail_address\fR
-The new email address of the user. Requires the domain name as well as the user name. For
-example: user@domain.com. If the domain name is not specified the user is added to the
-default domain. 
-.TP
-\fIpassword\fR
-Set the password for the user. If the password is not supplied on the command line then
-vadduser will prompt standard in for the password. The password must be typed in twice. 
-
-.PP
-The user is added to the inactive table – indibak (except for RFC ids postmaster and abuse)
-and is treated as an inactive user until the user logs in, upon which the user record is moved
-to the  active table – indimail.
-
-.SH RETURN VALUE
-0 if all steps were successful, non-zero otherwise. If any of the steps fail, a diagnostic
-message is printed.
-
-.SH "SEE ALSO"
-printdir(1), vreorg(8), vdeluser(1), vpasswd(1), vmoduser(1), vmoddomlimits(1)
