@@ -1,38 +1,0 @@
-.LL 8i
-.TH vdeluser 1
-.SH NAME
-vdeluser \- remove a user from a virtual domain
-
-.SH SYNOPSYS
-.B vdeluser
-[
-.I options
-]
-.I email address
-
-.SH DESCRIPTION
-.PP
-\fBvdeluser\fR removes a virtual domain email account from the system.
-All files and directories for the user are removed from disk. All forwarding, aliases,
-entries in database are also removed. The Directory Structure Layout's Hashed Component is
-decremented by one. For a clustered domain, the user will be deleted only if the user lies on
-the host where \fBvdeluser\fR is being run. \fBvdeluser\fR has the setuid bit set and must be
-run as root or as indimail user. When run \fBvdeluser\fR changes its uid to the uid defined for the domain defined
-in the assign file (See qmail-users(5)).
-
-.SH OPTIONS
-.TP
-\fB\-V\fR
-Display Version Numbers
-.TP
-\fB\-v\fR
-Set verbose mode.
-.TP
-\fIemail address\fR
-Fully qualified email account. For example: user@domain.com. If no domain is specified then the account is removed from the default virtual domain. 
-
-.SH RETURN VALUE
-0 if all steps were successful, non-zero otherwise. If any of the steps fail, a diagnostic message is printed.
-
-.SH "SEE ALSO"
-vadduser(1), qmail-users(5)
